--- a/DS_Questions/Questions/vectors_arrays/Order_Arrangment/Group_the_People_Given_the_Group_Size They Belong_To.adoc
+++ b/DS_Questions/Questions/vectors_arrays/Order_Arrangment/Group_the_People_Given_the_Group_Size They Belong_To.adoc
@@ -1,7 +1,7 @@
 :toc:
 :toclevels: 6
 
-=== link:https://leetcode.com/problems/group-the-people-given-the-group-size-they-belong-to/[Group the People Given the Group Size They Belong To]
+=== link:https://leetcode.com/problems/group-the-people-given-the-group-size-they-belong-to/[1282. Group the People Given the Group Size They Belong To]
 There are n people that are split into some unknown number of groups. Each person is labeled with a unique ID from 0 to n - 1.
 
 You are given an integer array groupSizes, where groupSizes[i] is the size of the group that person i is in. For example, if groupSizes[1] = 3, then person 1 must be in a group of size 3.
