--- a/System-Design/Concepts/Databases/Indexing/README.adoc
+++ b/System-Design/Concepts/Databases/Indexing/README.adoc
@@ -6,7 +6,9 @@ Technique to search data in database faster. This improve search/insert/modify o
 
 === Types of Indexing
 ==== 1. Forward Indexing
-Index is a hash-table which stores key and offset in the file. We search key in Hash map and then go the offset in file.
+* key and offset are stored in hashmap. We search key in Hash map and then go the offset. Indexes are created on frequently used search items
+* We can associate key with data, so that size of hashtable does not grow huge.
+* Everytime we recieve a 
 ```c
 key     Value=byte_offset
 123456    0
@@ -19,7 +21,8 @@ key=42 has info={name: San Francisco, attractions: [Golden Gate, Bridge]}
 image:indexing.png?raw=true[indexing]
 
 ==== 2. Reverse/Inverted/Secondary Indexing
-Mapping of words to document or set of documents. Indexing is slow as it first checks that word is present or not. Searching is very fast.
+* Mapping of words to document or set of documents. Indexing is slow as it first checks that word is present or not. Searching is very fast.
+* Indexes are created on frequently used colomns
 
 image:secondary_indexes.PNG?raw=true[reverse indexing]
 
