--- a/System-Design/Scalable/SWG_Secure_Web_Gateway/README.adoc
+++ b/System-Design/Scalable/SWG_Secure_Web_Gateway/README.adoc
@@ -52,17 +52,21 @@ Scalable, Reliable
 * Send all traffic to SWG cloud, this makes easier for organizations to enforce consistent web access policies across all users and devices.
 
 ==== Types of Users
-===== Roaming User
+* *1. Roaming User*
 ** Roaming means user(HCL Employee) not connected to company VPN, sitting in airport coffee shop & want to browse internet.
 ** He Opens `google.com`, browser redirects him to *POP(Poing of presense)*. POP forwards to *Celo(Central Lokation)* which does all monitoring.
-
-===== Branch office(on prem) users
+* *2. Branch office(on prem) users*
 
 ==== Methods of sending traffic to SWG
-===== 1. GRE/IPSec Tunnel (For Branch offices ie OnPrem)
-* *GRE*
+===== link:https://github.com/amitkumar50/pvt-research/blob/master/Projects/Juniper/FS/README.adoc[1. ON-PREM=Branch Office Customers. GRE/IPSec Tunnel]
 ** No IPSec negotation and encryption. Since webtraffic is already encrypted GRE encryption not needed.
-* *link:https://github.com/amitkumar50/pvt-research/blob/master/Projects/Juniper/FS/README.adoc[Flow on pvt git]
+** Every user has pvt IP(ie all traffic comes without link:/Networking/OSI-Layers/Layer-3/Routing/NAT[NAT] to identify the user.
+** *Problems:* 1. User wants higher throughput? Configure more tunnels at CPE router, because tunnels may be exhausted.
+** *link:https://github.com/amitkumar50/pvt-research/blob/master/Projects/Juniper/FS/README.adoc[FLOW DIAGRAM on pvt git]*
+
+===== linK:https://github.com/amitkumar50/pvt-research/blob/master/Projects/Juniper/FS/README.adoc[2. For Roaming Users. PAC File]
+* link:/Networking/OSI-Layers/Layer-7/Protocols/HTTP/Terms.adoc#pacproxy-auto-configuration-file[What is PAC File]
+* 
 
 == Terms
 === Service Location (Tenant Specific)
