--- a/DS_Questions/Questions/Strings/SubString_SubSequence/SubSeq/IsSubsequence.adoc
+++ b/DS_Questions/Questions/Strings/SubString_SubSequence/SubSeq/IsSubsequence.adoc
@@ -64,3 +64,33 @@ public:
     }
 };
 ```
+===== Python3
+```py
+class Solution:
+    def isSubsequence(self, s: str, t: str) -> bool:
+        if len(s)==0 and len(t)==0:
+            return True
+        for i in range(0, len(t)):
+            if (len(s) > 0 and t[i] == s[0]):
+                s = s[1:]
+            if len(s) == 0:
+                return True
+        return False
+```
+===== Go
+```go
+func isSubsequence(s string, t string) bool {
+    if len(s)==0 && len(t)==0 {
+        return true;
+    }
+    for i:=0; i<len(t); i++ {
+        if len(s)>0 && t[i] == s[0] {
+            s = s[1:];
+        }
+        if len(s) == 0 {
+            return true;
+        }
+    }
+    return false;
+}
+```
